Fix title and implement font, widgth, height, padding, div, box, text, spacing, font

--- a/design.css
+++ b/design.css
@@ -16,6 +16,34 @@ p {
     background-color: rgba(255, 0, 0, 0.2);
 }
 
+.paragrafos-title{
+    background-color: blue;
+    width: 150px;
+    height: 50px;
+    margin: auto;
+    text-align: center;
+    padding: 10px 10px 5px 10px;
+}
+
+.paragraph-lorem{
+    text-align: left;
+    text-decoration: overline;
+    text-transform: uppercase;
+    text-indent: 50px;
+    letter-spacing: 5px;
+    line-height: 3;
+    text-shadow: 1px 1px black;
+    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+.paragraph-lorem2{
+    font-style: italic;
+    font-size: 5vw;
+    font-weight: bold;
+    font-variant: small-caps;
+}
+
 h2, h3 {
     color: rgb(74, 199, 188);
     border: dashed 10px red;
@@ -41,4 +69,19 @@ h6{
 
 body{
     background: url("html-css-js.png") no-repeat scroll center;
+    background-color: antiquewhite;
 }
+
+.container {  
+    margin-top: 30px;
+    background-color: #f0f0f0;  
+    padding: 20px;
+    box-sizing: border-box;  
+    border: 1px solid #ccc;  
+}  
+.item {  
+    margin: 10px 0;  
+    padding: 10px;  
+    background-color: #e0e0e0;  
+}  
+
